--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
         </div>
       </section>
 
-    
-
       <h2>Interview af en passioneret sjæl</h2>
 
       <div class="interview_videoer">
@@ -106,7 +104,9 @@
           <embed src="" type="" />
         </div>
         <div class="video">
-          <video src="billeder/interview_anna.mp4"></video>
+          <video
+            src="http://celinestendevad.dk/kea/05_indhold/website/billeder/interview_anna.mp4"
+          ></video>
         </div>
       </div>
     </main>
